--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DB_HOST=localhost
 DB_USER=developer
 DB_PASSWORD=developer
 DB_NAME=developer
-JWT_SECRET=gg
-JWT_EXPIRE=24h
+JWT_SECRET="gg"
+JWT_EXPIRE="24h"
